--- a/public/style/login.css
+++ b/public/style/login.css
@@ -67,6 +67,11 @@ input[type]:focus {
     color: #FFF;
 }
 
+.inputs p{
+  color: red;
+  font-size: 12pt;
+}
+
 
 .submit {
   background: transparent;
