--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -13,7 +13,9 @@
         <input type="email" name="email" placeholder="Email" required/>
 
         <input type="password" name="password" placeholder="Password" required/>
-       
+         {{#if msg}}
+         <p>{{msg}}</p>
+         {{/if}}
       </div>
       
   
