--- a/src/views/signup.hbs
+++ b/src/views/signup.hbs
@@ -6,8 +6,7 @@
 <!--       <h2>oDsoky .<span>inc</span></h2> -->
       <p>TO DO LIST</p>
     </div>
-    <form autocomplete="on" action="/signup" method="POST">
-
+    <form autocomplete="on" action="/signup" method="POST" enctype="multipart/form-data">
       <div class="inputs">
 <!--         <i class="fa fa-envelope-o" aria-hidden="true"></i> -->
         <input type="text" name="fname" placeholder="First Name" required/>
