--- a/public/style/signup.css
+++ b/public/style/signup.css
@@ -34,7 +34,7 @@ body{
   float: left;
   background: url(https://s-media-cache-ak0.pinimg.com/736x/f7/cf/e1/f7cfe19050679efd4fa855ab99461ac4.jpg);
   background-size: cover;
-  color: #649DAD;
+  color: #1475ce;
 /*   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
 }
 /* about p*/
